fixed .inner width and changed the flex wrap on the 1024px

--- a/public/sass/partials/_layout.scss
+++ b/public/sass/partials/_layout.scss
@@ -15,9 +15,9 @@ body {
 }
 
 .inner {
-  max-width:900px;
+  max-width:1350px;
   margin: 0 auto;
-  @media all and (max-width: 900px) {
+  @media all and (max-width: 1400px) {
     padding: 2rem;
   }
 }
